--- a/backend/web/adminlte/css/AdminLTE.css
+++ b/backend/web/adminlte/css/AdminLTE.css
@@ -168,7 +168,7 @@ h6,
 }
 /* General Links */
 a {
-  color: #3c8dbc;
+  color: #5967a9;
 }
 a:hover,
 a:active,
@@ -862,7 +862,7 @@ a:focus {
 }
 .control-sidebar-dark,
 .control-sidebar-dark + .control-sidebar-bg {
-  background: #222d32;
+  background: #22242a;
 }
 .control-sidebar-dark .nav-tabs.control-sidebar-tabs {
   border-bottom: #1c2529;
@@ -889,7 +889,7 @@ a:focus {
 .control-sidebar-dark .nav-tabs.control-sidebar-tabs > li.active > a:hover,
 .control-sidebar-dark .nav-tabs.control-sidebar-tabs > li.active > a:focus,
 .control-sidebar-dark .nav-tabs.control-sidebar-tabs > li.active > a:active {
-  background: #222d32;
+  background: #22242a;
   color: #fff;
 }
 .control-sidebar-dark .control-sidebar-heading,
@@ -897,7 +897,7 @@ a:focus {
   color: #fff;
 }
 .control-sidebar-dark .control-sidebar-menu > li > a:hover {
-  background: #1e282c;
+  background: #2d3140;
 }
 .control-sidebar-dark .control-sidebar-menu > li > a .menu-info > p {
   color: #b8c7ce;
@@ -1287,7 +1287,7 @@ a:focus {
   border-color: #d2d6de;
 }
 .form-control:focus {
-  border-color: #3c8dbc;
+  border-color: #5967a9;
   box-shadow: none;
 }
 .form-control::-moz-placeholder,
@@ -1445,7 +1445,7 @@ a:focus {
 }
 .progress-bar-light-blue,
 .progress-bar-primary {
-  background-color: #3c8dbc;
+  background-color: #5967a9;
 }
 .progress-striped .progress-bar-light-blue,
 .progress-striped .progress-bar-primary {
@@ -1585,7 +1585,7 @@ a:focus {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
 .box.box-primary {
-  border-top-color: #3c8dbc;
+  border-top-color: #5967a9;
 }
 .box.box-info {
   border-top-color: #00c0ef;
@@ -1646,12 +1646,12 @@ a:focus {
   color: #444;
 }
 .box.box-solid.box-primary {
-  border: 1px solid #3c8dbc;
+  border: 1px solid #5967a9;
 }
 .box.box-solid.box-primary > .box-header {
   color: #fff;
-  background: #3c8dbc;
-  background-color: #3c8dbc;
+  background: #5967a9;
+  background-color: #5967a9;
 }
 .box.box-solid.box-primary > .box-header a,
 .box.box-solid.box-primary > .box-header .btn {
@@ -1977,7 +1977,7 @@ a:focus {
   border-left-color: #00a65a;
 }
 .todo-list .primary {
-  border-left-color: #3c8dbc;
+  border-left-color: #5967a9;
 }
 .todo-list .handle {
   display: inline-block;
@@ -2279,13 +2279,13 @@ a:focus {
   background-color: #e7e7e7;
 }
 .btn-primary {
-  background-color: #3c8dbc;
-  border-color: #6b7ac2;
+  background-color: #5967a9;
+  border-color: #5967a9;
 }
 .btn-primary:hover,
 .btn-primary:active,
 .btn-primary.hover {
-  background-color: #6b7ac2;
+  background-color: #5967a9;
 }
 .btn-success {
   background-color: #00a65a;
@@ -2482,7 +2482,7 @@ a:focus {
 .nav-pills > li.active > a,
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
-  border-top-color: #3c8dbc;
+  border-top-color: #5967a9;
 }
 .nav-pills > li.active > a {
   font-weight: 600;
@@ -2499,7 +2499,7 @@ a:focus {
   background: transparent;
   color: #444;
   border-top: 0;
-  border-left-color: #3c8dbc;
+  border-left-color: #5967a9;
 }
 .nav-stacked > li.header {
   border-bottom: 1px solid #ddd;
@@ -2550,7 +2550,7 @@ a:focus {
   border-color: transparent;
 }
 .nav-tabs-custom > .nav-tabs > li.active {
-  border-top-color: #3c8dbc;
+  border-top-color: #5967a9;
 }
 .nav-tabs-custom > .nav-tabs > li.active > a,
 .nav-tabs-custom > .nav-tabs > li.active:hover > a {
@@ -2607,7 +2607,7 @@ a:focus {
   color: #999;
 }
 .nav-tabs-custom.tab-primary > .nav-tabs > li.active {
-  border-top-color: #3c8dbc;
+  border-top-color: #5967a9;
 }
 .nav-tabs-custom.tab-info > .nav-tabs > li.active {
   border-top-color: #00c0ef;
@@ -2867,7 +2867,7 @@ table.text-center th {
   bottom: 0;
   height: 250px;
   width: 100%;
-  background: #222d32;
+  background: #22242a;
   color: #fff;
   overflow: auto;
 }
@@ -2923,13 +2923,13 @@ table.text-center th {
   border-left-color: #dd4b39;
 }
 .direct-chat-primary .right > .direct-chat-text {
-  background: #3c8dbc;
-  border-color: #3c8dbc;
+  background: #5967a9;
+  border-color: #5967a9;
   color: #fff;
 }
 .direct-chat-primary .right > .direct-chat-text:after,
 .direct-chat-primary .right > .direct-chat-text:before {
-  border-left-color: #3c8dbc;
+  border-left-color: #5967a9;
 }
 .direct-chat-warning .right > .direct-chat-text {
   background: #f39c12;
@@ -4797,14 +4797,14 @@ fieldset[disabled] .btn-yahoo.focus {
   height: 34px;
 }
 .select2-container--default.select2-container--open {
-  border-color: #3c8dbc;
+  border-color: #5967a9;
 }
 .select2-dropdown {
   border: 1px solid #d2d6de;
   border-radius: 0;
 }
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
-  background-color: #3c8dbc;
+  background-color: #5967a9;
   color: white;
 }
 .select2-results__option {
@@ -4839,7 +4839,7 @@ fieldset[disabled] .btn-yahoo.focus {
 }
 .select2-container--default.select2-container--focus .select2-selection--multiple,
 .select2-container--default .select2-search--dropdown .select2-search__field {
-  border-color: #3c8dbc !important;
+  border-color: #5967a9 !important;
 }
 .select2-container--default .select2-results__option[aria-disabled=true] {
   color: #999;
@@ -4856,14 +4856,14 @@ fieldset[disabled] .btn-yahoo.focus {
   border-radius: 0;
 }
 .select2-container--default .select2-selection--multiple:focus {
-  border-color: #3c8dbc;
+  border-color: #5967a9;
 }
 .select2-container--default.select2-container--focus .select2-selection--multiple {
   border-color: #d2d6de;
 }
 .select2-container--default .select2-selection--multiple .select2-selection__choice {
-  background-color: #3c8dbc;
-  border-color: #6b7ac2;
+  background-color: #5967a9;
+  border-color: #5967a9;
   padding: 1px 10px;
   color: #fff;
 }
@@ -5037,7 +5037,7 @@ fieldset[disabled] .btn-yahoo.focus {
 .bg-light-blue,
 .label-primary,
 .modal-primary .modal-body {
-  background-color: #3c8dbc !important;
+  background-color: #5967a9 !important;
 }
 .bg-green,
 .callout.callout-success,
@@ -5149,7 +5149,7 @@ fieldset[disabled] .btn-yahoo.focus {
   color: #111 !important;
 }
 .text-light-blue {
-  color: #3c8dbc !important;
+  color: #5967a9 !important;
 }
 .text-green {
   color: #00a65a !important;
@@ -5252,12 +5252,12 @@ fieldset[disabled] .btn-yahoo.focus {
   color: #fff;
 }
 .bg-light-blue-gradient {
-  background: #3c8dbc !important;
-  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #3c8dbc), color-stop(1, #67a8ce)) !important;
-  background: -ms-linear-gradient(bottom, #3c8dbc, #67a8ce) !important;
-  background: -moz-linear-gradient(center bottom, #3c8dbc 0%, #67a8ce 100%) !important;
-  background: -o-linear-gradient(#67a8ce, #3c8dbc) !important;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#67a8ce', endColorstr='#3c8dbc', GradientType=0) !important;
+  background: #5967a9 !important;
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #5967a9), color-stop(1, #67a8ce)) !important;
+  background: -ms-linear-gradient(bottom, #5967a9, #67a8ce) !important;
+  background: -moz-linear-gradient(center bottom, #5967a9 0%, #67a8ce 100%) !important;
+  background: -o-linear-gradient(#67a8ce, #5967a9) !important;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#67a8ce', endColorstr='#5967a9', GradientType=0) !important;
   color: #fff;
 }
 .bg-blue-gradient {
@@ -5498,7 +5498,7 @@ hr {
   background: #f56954;
 }
 #blue .slider-selection {
-  background: #3c8dbc;
+  background: #5967a9;
 }
 #green .slider-selection {
   background: #00a65a;
