--- a/backend/web/adminlte/css/alt/AdminLTE-without-plugins.css
+++ b/backend/web/adminlte/css/alt/AdminLTE-without-plugins.css
@@ -169,7 +169,7 @@ h6,
 }
 /* General Links */
 a {
-  color: #3c8dbc;
+  color: #5967a9;
 }
 a:hover,
 a:active,
@@ -863,7 +863,7 @@ a:focus {
 }
 .control-sidebar-dark,
 .control-sidebar-dark + .control-sidebar-bg {
-  background: #222d32;
+  background: #22242a;
 }
 .control-sidebar-dark .nav-tabs.control-sidebar-tabs {
   border-bottom: #1c2529;
@@ -890,7 +890,7 @@ a:focus {
 .control-sidebar-dark .nav-tabs.control-sidebar-tabs > li.active > a:hover,
 .control-sidebar-dark .nav-tabs.control-sidebar-tabs > li.active > a:focus,
 .control-sidebar-dark .nav-tabs.control-sidebar-tabs > li.active > a:active {
-  background: #222d32;
+  background: #22242a;
   color: #fff;
 }
 .control-sidebar-dark .control-sidebar-heading,
@@ -898,7 +898,7 @@ a:focus {
   color: #fff;
 }
 .control-sidebar-dark .control-sidebar-menu > li > a:hover {
-  background: #1e282c;
+  background: #2d3140;
 }
 .control-sidebar-dark .control-sidebar-menu > li > a .menu-info > p {
   color: #b8c7ce;
@@ -1288,7 +1288,7 @@ a:focus {
   border-color: #d2d6de;
 }
 .form-control:focus {
-  border-color: #3c8dbc;
+  border-color: #5967a9;
   box-shadow: none;
 }
 .form-control::-moz-placeholder,
@@ -1446,7 +1446,7 @@ a:focus {
 }
 .progress-bar-light-blue,
 .progress-bar-primary {
-  background-color: #3c8dbc;
+  background-color: #5967a9;
 }
 .progress-striped .progress-bar-light-blue,
 .progress-striped .progress-bar-primary {
@@ -1586,7 +1586,7 @@ a:focus {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
 .box.box-primary {
-  border-top-color: #3c8dbc;
+  border-top-color: #5967a9;
 }
 .box.box-info {
   border-top-color: #00c0ef;
@@ -1647,12 +1647,12 @@ a:focus {
   color: #444;
 }
 .box.box-solid.box-primary {
-  border: 1px solid #3c8dbc;
+  border: 1px solid #5967a9;
 }
 .box.box-solid.box-primary > .box-header {
   color: #fff;
-  background: #3c8dbc;
-  background-color: #3c8dbc;
+  background: #5967a9;
+  background-color: #5967a9;
 }
 .box.box-solid.box-primary > .box-header a,
 .box.box-solid.box-primary > .box-header .btn {
@@ -1978,7 +1978,7 @@ a:focus {
   border-left-color: #00a65a;
 }
 .todo-list .primary {
-  border-left-color: #3c8dbc;
+  border-left-color: #5967a9;
 }
 .todo-list .handle {
   display: inline-block;
@@ -2280,13 +2280,13 @@ a:focus {
   background-color: #e7e7e7;
 }
 .btn-primary {
-  background-color: #3c8dbc;
-  border-color: #6b7ac2;
+  background-color: #5967a9;
+  border-color: #5967a9;
 }
 .btn-primary:hover,
 .btn-primary:active,
 .btn-primary.hover {
-  background-color: #6b7ac2;
+  background-color: #5967a9;
 }
 .btn-success {
   background-color: #00a65a;
@@ -2483,7 +2483,7 @@ a:focus {
 .nav-pills > li.active > a,
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
-  border-top-color: #3c8dbc;
+  border-top-color: #5967a9;
 }
 .nav-pills > li.active > a {
   font-weight: 600;
@@ -2500,7 +2500,7 @@ a:focus {
   background: transparent;
   color: #444;
   border-top: 0;
-  border-left-color: #3c8dbc;
+  border-left-color: #5967a9;
 }
 .nav-stacked > li.header {
   border-bottom: 1px solid #ddd;
@@ -2551,7 +2551,7 @@ a:focus {
   border-color: transparent;
 }
 .nav-tabs-custom > .nav-tabs > li.active {
-  border-top-color: #3c8dbc;
+  border-top-color: #5967a9;
 }
 .nav-tabs-custom > .nav-tabs > li.active > a,
 .nav-tabs-custom > .nav-tabs > li.active:hover > a {
@@ -2608,7 +2608,7 @@ a:focus {
   color: #999;
 }
 .nav-tabs-custom.tab-primary > .nav-tabs > li.active {
-  border-top-color: #3c8dbc;
+  border-top-color: #5967a9;
 }
 .nav-tabs-custom.tab-info > .nav-tabs > li.active {
   border-top-color: #00c0ef;
@@ -2868,7 +2868,7 @@ table.text-center th {
   bottom: 0;
   height: 250px;
   width: 100%;
-  background: #222d32;
+  background: #22242a;
   color: #fff;
   overflow: auto;
 }
@@ -2924,13 +2924,13 @@ table.text-center th {
   border-left-color: #dd4b39;
 }
 .direct-chat-primary .right > .direct-chat-text {
-  background: #3c8dbc;
-  border-color: #3c8dbc;
+  background: #5967a9;
+  border-color: #5967a9;
   color: #fff;
 }
 .direct-chat-primary .right > .direct-chat-text:after,
 .direct-chat-primary .right > .direct-chat-text:before {
-  border-left-color: #3c8dbc;
+  border-left-color: #5967a9;
 }
 .direct-chat-warning .right > .direct-chat-text {
   background: #f39c12;
@@ -3563,7 +3563,7 @@ table.text-center th {
 .bg-light-blue,
 .label-primary,
 .modal-primary .modal-body {
-  background-color: #3c8dbc !important;
+  background-color: #5967a9 !important;
 }
 .bg-green,
 .callout.callout-success,
@@ -3675,7 +3675,7 @@ table.text-center th {
   color: #111 !important;
 }
 .text-light-blue {
-  color: #3c8dbc !important;
+  color: #5967a9 !important;
 }
 .text-green {
   color: #00a65a !important;
@@ -3778,12 +3778,12 @@ table.text-center th {
   color: #fff;
 }
 .bg-light-blue-gradient {
-  background: #3c8dbc !important;
-  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #3c8dbc), color-stop(1, #67a8ce)) !important;
-  background: -ms-linear-gradient(bottom, #3c8dbc, #67a8ce) !important;
-  background: -moz-linear-gradient(center bottom, #3c8dbc 0%, #67a8ce 100%) !important;
-  background: -o-linear-gradient(#67a8ce, #3c8dbc) !important;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#67a8ce', endColorstr='#3c8dbc', GradientType=0) !important;
+  background: #5967a9 !important;
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #5967a9), color-stop(1, #67a8ce)) !important;
+  background: -ms-linear-gradient(bottom, #5967a9, #67a8ce) !important;
+  background: -moz-linear-gradient(center bottom, #5967a9 0%, #67a8ce 100%) !important;
+  background: -o-linear-gradient(#67a8ce, #5967a9) !important;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#67a8ce', endColorstr='#5967a9', GradientType=0) !important;
   color: #fff;
 }
 .bg-blue-gradient {
@@ -4024,7 +4024,7 @@ hr {
   background: #f56954;
 }
 #blue .slider-selection {
-  background: #3c8dbc;
+  background: #5967a9;
 }
 #green .slider-selection {
   background: #00a65a;
