--- a/backend/web/css/site.css
+++ b/backend/web/css/site.css
@@ -127,7 +127,7 @@ a.desc:after {
 }
 
 .cust-checkbox label:hover {
-  color: #929ee6f1;
+  color: #8a96dfef;
 }
 
 .cust-checkbox__box {
@@ -135,7 +135,7 @@ a.desc:after {
   display: inline-block;
   width: 40px;
   height: 20px;
-  border: 2px solid #929ee6f1;
+  border: 2px solid #8a96dfef;
   border-radius: 10px;
   background: #fff;
   transition: all 0.3s;
@@ -150,14 +150,14 @@ a.desc:after {
   display: block;
   width: 10px;
   height: 10px;
-  border: 5px solid #929ee6f1;
+  border: 5px solid #8a96dfef;
   border-radius: 50%;
   transition: all 0.3s;
 }
 
 .cust-checkbox [type="checkbox"]:checked + .cust-checkbox__box,
 .cust-checkbox [type="radio"]:checked + .cust-checkbox__box {
-  background: #929ee6f1;
+  background: #8a96dfef;
 }
 
 .cust-checkbox [type="checkbox"]:checked + .cust-checkbox__box:before,
@@ -171,14 +171,14 @@ a.desc:after {
 }
 /*---------- checkbox ----------*/
 .navbar-static-top {
-    background: linear-gradient(45deg, #828ec4, #9ba6e7cb, #5c6cbe);
+    background: linear-gradient(45deg, #7d8bcc, #9ba6e7cb, #5c6cbe);
 }
 .dropdown-menu .user-header {
     background: linear-gradient(45deg, #6b7ac2, #919acfe1, #919acfe1);
 }
 
 .main-header .logo {
-    background: linear-gradient(45deg, #7b87c7, #7b87c7);
+    background: linear-gradient(45deg, #7b87c7, #707ab3);
 }
 
 .kv-grid-container {
@@ -188,4 +188,38 @@ a.desc:after {
     border-color: #d9d9d966;
     border-top-color: #6d92d5e0;
     background-color: #f1f1f1;
+}
+
+.beauty-sub-container{
+    border: solid;
+    border-width: 2px;
+    border-radius: 5px;
+    border-color: #d9d9d966;
+    border-top-color: #6d92d5e0;
+    background-color: #f1f1f1;
+}
+
+.nav-tabs li.active{
+    font-weight: 600;
+    font-size: 15px;
+}
+
+.nav-tabs li{
+    font-size: 15px;
+}
+
+.nav-tabs {
+    background: linear-gradient(45deg, #f5f5f5, #f5f5f5);
+} 
+
+.content h1{
+    margin-top: auto;
+    margin-bottom: 20px;
+    font-size: 28px;
+}
+
+.create-btn{
+    float: right;
+    margin-right: 5px;
+    margin-top: 10px;
 }
