css fix & views

--- a/backend/web/adminlte/css/AdminLTE.css
+++ b/backend/web/adminlte/css/AdminLTE.css
@@ -2288,13 +2288,13 @@ a:focus {
   background-color: #5967a9;
 }
 .btn-success {
-  background-color: #00a65a;
-  border-color: #008d4c;
+  background-color: #00a682;
+  border-color: #008d6a;
 }
 .btn-success:hover,
 .btn-success:active,
 .btn-success.hover {
-  background-color: #008d4c;
+  background-color: #008d6e;
 }
 .btn-info {
   background-color: #00c0ef;
